<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity" >

    <!-- 使用自定义的侧滑布局，orientation必须为水平方向 -->

    <com.fox_lee.yunwen.slide_application.SlidingLayout
        android:id="@+id/slidingLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <!--
            侧滑布局的根节点下，有且只能有两个子元素,这两个子元素必须是四种基本布局之一,
            即LinearLayout, RelativeLayout, FrameLayout或TableLayout。
            第一个子元素将做为左侧布局，初始化后被隐藏。第二个子元素将做为右侧布局，
            也就是当前Activity的主布局，将主要的数据放在里面。
        -->

        <!--<RelativeLayout-->
            <!--android:id="@+id/menu"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="fill_parent"-->
            <!--android:background="#00ccff" >-->

            <LinearLayout
                android:layout_width="165dp"
                android:id="@+id/menu"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:orientation="vertical"
                android:background="@drawable/boder"
                android:weightSum="8">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/rowIconAlgorithm"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:scaleType="fitXY"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:background="@color/colorSlide1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="20dp"
                        android:textColor="@color/colorWhite"
                        android:text="@string/slide_algorithm"
                        android:padding="5dp" />
                    <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/menu_code_blue"/>-->
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/rowIconJava"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:scaleType="fitXY"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:background="@color/colorSlide2">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20dp"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/slide_java"
                        android:padding="5dp" />
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/rowIconAndroid"
                    android:clickable="true"
                    android:scaleType="fitXY"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:background="@color/colorSlide1">
                    <TextView
                        android:id="@+id/row_tv_android"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textSize="20dp"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/slide_android"
                        android:padding="5dp" />
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/slide_new"
                        android:layout_alignParentRight="true"
                        />

                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/rowIconFavorite"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:background="@color/colorSlide2">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20dp"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/slide_favorite"
                        android:padding="5dp" />
                    <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/menu_favorite_blue"/>-->
                </LinearLayout>
                <!--android:scaleType="fitXY"/>-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/rowIconAbout"
                    android:clickable="true"
                    android:scaleType="fitXY"
                    android:orientation="horizontal"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:background="@color/colorSlide1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="20dp"
                        android:textColor="@color/colorWhite"
                        android:text="@string/slide_about"
                        android:padding="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/rowIcon5"
                    android:clickable="true"
                    android:scaleType="fitXY"
                    android:orientation="horizontal"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:background="@color/colorSlide2">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="20dp"
                        android:textColor="@color/colorWhite"
                        android:text="@string/slide_feedback"
                        android:padding="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/rowIcon6"
                    android:clickable="true"
                    android:scaleType="fitXY"
                    android:orientation="horizontal"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:background="@color/colorSlide1">
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/rowIcon7"
                    android:clickable="true"
                    android:scaleType="fitXY"
                    android:orientation="horizontal"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:background="@color/colorPrimaryDark">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="20dp"
                        android:textColor="@color/colorWhite"
                        android:text="@string/slide_version"
                        android:padding="5dp" />
                </LinearLayout>
            </LinearLayout>
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerInParent="true"-->
                <!--android:text="This is menu"-->
                <!--android:textColor="#000000"-->
                <!--android:textSize="28sp" />-->
        <!--</RelativeLayout>-->

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/menuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Menu" />

            <ListView
                android:id="@+id/contentList"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >
            </ListView>
        </LinearLayout>
    </com.fox_lee.yunwen.slide_application.SlidingLayout>

</LinearLayout>